Pantalla SignIn terminada -Modo Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 * {
   font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
 
 :root{
   --primary-blue: #51B6D4;
   --secondary-red: #DD888A;
-  --background-black: #3F3F4F;
-  --font-white: #F1F6F8;
+  --color-black: #3F3F4F;
+  --color-white: #F1F6F8;
 }
