--- a/src/Components/UX/Button/Button.css
+++ b/src/Components/UX/Button/Button.css
@@ -5,7 +5,7 @@ button {
   border: none;
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.25);
   font-weight: 700;
-  color: var(--font-white);
+  color: var(--color-white);
   font-size: 1.125rem;
   cursor: pointer;
 }
@@ -15,5 +15,5 @@ button.button-primary{
 }
 
 button.button-secondary{
-  background-color: var(--primary-blue); 
+  background-color: var(--secondary-red); 
 }
