--- a/src/Components/UX/Button/Button.css
+++ b/src/Components/UX/Button/Button.css
@@ -17,3 +17,10 @@ button.button-primary{
 button.button-secondary{
   background-color: var(--secondary-red); 
 }
+
+@media screen and (min-width: 1300px){
+  button{
+    height: 3.8rem;
+    font-size: 1.4rem;
+  }
+}
