--- a/src/Components/UX/Input/Input.css
+++ b/src/Components/UX/Input/Input.css
@@ -36,8 +36,16 @@
 }
 
 /* Modo escritorio */
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1300px){
   .input{
     font-size: 1.75rem;
+  }
+
+  .input-error{
+    font-size: 1rem;
+  }
+  
+  .input-info{
+    font-size: 1rem;
   }
 }
