Implementacion de react-router-dom en App y Header

--- a/src/Components/UX/Header/Header.css
+++ b/src/Components/UX/Header/Header.css
@@ -21,6 +21,8 @@
   position: relative;
   width: 50%;
   cursor: pointer;
+  color: var(--color-white);
+  text-decoration: none;
 }
 
 @media screen and (min-width: 1024px){
