--- a/src/Components/UX/Input/Input.css
+++ b/src/Components/UX/Input/Input.css
@@ -1,51 +1,53 @@
-.input-container{
-  display: grid;
-  place-items: center;
+.input-container {
+    display: grid;
+    place-items: center;
 }
 
-.input, .input::before, .input::after {
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.125rem;
+.input,
+.input::before,
+.input::after {
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.125rem;
 }
 
-.input{
-  border: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: none;
-  color: var(--color-black);
-  border-bottom: 2px solid var(--color-black);
+.input {
+    border: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: none;
+    color: var(--color-black);
+    border-bottom: 2px solid var(--color-black);
 }
 
-.input::placeholder{
-  color: var(--color-black);
-  opacity: 0.20;
+.input::placeholder {
+    color: var(--color-black);
+    opacity: 0.20;
 }
 
-.input-error{
-  color: var(--secondary-red);
-  font-size: .875rem;
+.input-error {
+    color: var(--secondary-red);
+    font-size: .875rem;
 }
 
-.input-info{
-  color: var(--color-black);
-  font-size: .875rem;
+.input-info {
+    color: var(--color-black);
+    font-size: .875rem;
 }
+
 
 /* Modo escritorio */
-@media screen and (min-width: 1300px){
-  .input{
-    font-size: 1.75rem;
-  }
 
-  .input-error{
-    font-size: 1rem;
-  }
-  
-  .input-info{
-    font-size: 1rem;
-  }
+@media screen and (min-width: 1300px) {
+    .input {
+        font-size: 1.75rem;
+    }
+    .input-error {
+        font-size: 1rem;
+    }
+    .input-info {
+        font-size: 1rem;
+    }
 }
